--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
